[project]
name = "call-me-maybe"
version = "0.1.0"
description = "LLM function calling with constrained decoding"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
